force-app/main/default/objects/User/fields/BLCAbrechnungslisteFachberater__c.field-meta.xml
<CustomField>
    <fullName>BLCAbrechnungslisteFachberater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS170 - Role Fachberater Abrechnungslist</label>
    <type>Checkbox</type>
</CustomField>