force-app/main/default/objects/User/fields/CanTrackExpensesForOthers__c.field-meta.xml
<CustomField>
    <fullName>CanTrackExpensesForOthers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS420 - Function Can Track Expenses for</label>
    <type>Checkbox</type>
</CustomField>