force-app/main/default/objects/User/fields/CanTrackTimeForOthers__c.field-meta.xml
<CustomField>
    <fullName>CanTrackTimeForOthers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS430 - Function Can Track Time for Othe</label>
    <type>Checkbox</type>
</CustomField>