force-app/main/default/objects/User/fields/CompensationTime__c.field-meta.xml
<CustomField>
    <fullName>CompensationTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS440 - Function Time.Compensation Time</label>
    <type>Checkbox</type>
</CustomField>