force-app/main/default/objects/User/fields/HourlyWage__c.field-meta.xml
<CustomField>
    <fullName>HourlyWage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS450 - Function Time.Hourly Wage</label>
    <type>Checkbox</type>
</CustomField>