force-app/main/default/objects/User/fields/ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>ID_18_digits__c</fullName>
    <formula>CASESAFEID(  Id  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID 18 digits</label>
    <type>Text</type>
</CustomField>