force-app/main/default/objects/User/fields/InternalContactID__c.field-meta.xml
<CustomField>
    <fullName>InternalContactID__c</fullName>
    <label>Internal Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>