force-app/main/default/objects/User/fields/IsFinanceManager__c.field-meta.xml
<CustomField>
    <fullName>IsFinanceManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS130 - Role Finance Manager</label>
    <type>Checkbox</type>
</CustomField>