force-app/main/default/objects/User/fields/IsHRManager__c.field-meta.xml
<CustomField>
    <fullName>IsHRManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS120 - Role HR Manager</label>
    <type>Checkbox</type>
</CustomField>