force-app/main/default/objects/User/fields/IsManagingDirector__c.field-meta.xml
<CustomField>
    <fullName>IsManagingDirector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS110 - Role Managing Director</label>
    <type>Checkbox</type>
</CustomField>