force-app/main/default/objects/User/fields/IsProjectManager__c.field-meta.xml
<CustomField>
    <fullName>IsProjectManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS100 - Role Project Manager</label>
    <type>Checkbox</type>
</CustomField>