force-app/main/default/objects/User/fields/IsSuperUser__c.field-meta.xml
<CustomField>
    <fullName>IsSuperUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS150 - Role Super User</label>
    <type>Checkbox</type>
</CustomField>