force-app/main/default/objects/User/fields/PasswordSent__c.field-meta.xml
<CustomField>
    <fullName>PasswordSent__c</fullName>
    <label>Password sent</label>
    <type>Date</type>
</CustomField>