force-app/main/default/objects/User/fields/Phone_external__c.field-meta.xml
<CustomField>
    <fullName>Phone_external__c</fullName>
    <label>Phone (external)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>