force-app/main/default/objects/User/fields/PiketSpecial__c.field-meta.xml
<CustomField>
    <fullName>PiketSpecial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS470 - Function Time.Piket Special</label>
    <type>Checkbox</type>
</CustomField>