force-app/main/default/objects/User/fields/PS000AllEmployees__c.field-meta.xml
<CustomField>
    <fullName>PS000AllEmployees__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PS000 - All Employees</label>
    <type>Checkbox</type>
</CustomField>