force-app/main/default/objects/User/fields/PS160RoleITManager__c.field-meta.xml
<CustomField>
    <fullName>PS160RoleITManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS160 - Role IT Manager</label>
    <type>Checkbox</type>
</CustomField>