force-app/main/default/objects/User/fields/PS180RoleFinanceApprover__c.field-meta.xml
<CustomField>
    <fullName>PS180RoleFinanceApprover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS180 - Role Finance Approver</label>
    <type>Checkbox</type>
</CustomField>