force-app/main/default/objects/User/fields/PS410FunctionSkypeforSalesforce__c.field-meta.xml
<CustomField>
    <fullName>PS410FunctionSkypeforSalesforce__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PS410 - Function Skype for Salesforce</label>
    <type>Checkbox</type>
</CustomField>