force-app/main/default/objects/User/fields/PS460FunctionInvoiceCancel__c.field-meta.xml
<CustomField>
    <fullName>PS460FunctionInvoiceCancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS460 - Function Invoice.Cancel</label>
    <type>Checkbox</type>
</CustomField>