force-app/main/default/objects/User/fields/PS480FunctionValidationRulesActive__c.field-meta.xml
<CustomField>
    <fullName>PS480FunctionValidationRulesActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, Validation Rules are active. If unchecked, Validation Rules are not considered.</inlineHelpText>
    <label>PS480 - Function Validation Rules Active</label>
    <type>Checkbox</type>
</CustomField>