force-app/main/default/objects/User/fields/SFLicense__c.field-meta.xml
<CustomField>
    <fullName>SFLicense__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF License</label>
    <type>Text</type>
</CustomField>