force-app/main/default/objects/User/fields/Staff_Number_Old__c.field-meta.xml
<CustomField>
    <fullName>Staff_Number_Old__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>19.06.2017, ary: Wird nicht mehr benötigt, Staff-Nr. ist neu auf dem Kontakt.</description>
    <inlineHelpText>Abacus Employee ID</inlineHelpText>
    <label>Staff Nr. Old</label>
    <length>5</length>
    <type>Text</type>
</CustomField>