force-app/main/default/objects/User/fields/UR100Trade25VAT__c.field-meta.xml
<CustomField>
    <fullName>UR100Trade25VAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UR100 - Trade &amp; 2.5% VAT</label>
    <type>Checkbox</type>
</CustomField>