force-app/main/default/objects/User/validationRules/US003_No_Change_2.validationRule-meta.xml
<ValidationRule>
    <fullName>US003_No_Change_2</fullName>
    <active>true</active>
    <description>Nur HR oder IT darf gewisse Daten eines Mitarbeitenden ändern</description>
    <errorConditionFormula>AND( 
$User.PS480FunctionValidationRulesActive__c =true, 
$User.IsHRManager__c = false,
$User.PS160RoleITManager__c = false,
OR(
ISCHANGED(Email),
ISCHANGED( Phone )
)
)</errorConditionFormula>
    <errorMessage>You are not allowed to change telecommunication data of your User Profile. Please get in touch with HR or IT.
(US003)</errorMessage>
</ValidationRule>