force-app/main/default/objects/User/listViews/Active_Users_All.listView-meta.xml
<ListView>
    <fullName>Active_Users_All</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>SFLicense__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users - All</label>
    <language>en_US</language>
</ListView>