force-app/main/default/objects/User/listViews/Active_Users_All_No_Internal_ConID.listView-meta.xml
<ListView>
    <fullName>Active_Users_All_No_Internal_ConID</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>InternalContactID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>InternalContactID__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Users - All - No Internal ConID</label>
    <language>en_US</language>
</ListView>