force-app/main/default/objects/User/listViews/Active_Users_All_No_Manager.listView-meta.xml
<ListView>
    <fullName>Active_Users_All_No_Manager</fullName>
    <columns>FULL_NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>MANAGER</field>
        <operation>equals</operation>
    </filters>
    <label>Active Users - All - No Manager</label>
    <language>en_US</language>
</ListView>