force-app/main/default/objects/User/listViews/Active_Users_All_Salesforce_Content.listView-meta.xml
<ListView>
    <fullName>Active_Users_All_Salesforce_Content</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>SFLicense__c</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SFCONTENT_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users - All &quot;Salesforce Content&quot;</label>
    <language>en_US</language>
</ListView>