force-app/main/default/objects/User/listViews/Active_Users_Hourly_Wage.listView-meta.xml
<ListView>
    <fullName>Active_Users_Hourly_Wage</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>HourlyWage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HourlyWage__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users - Hourly Wage</label>
    <language>en_US</language>
</ListView>