force-app/main/default/objects/User/listViews/Active_Users_VR_not_active.listView-meta.xml
<ListView>
    <fullName>Active_Users_VR_not_active</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>SFLicense__c</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>OFFLINE_USER</columns>
    <columns>MARKETING_USER</columns>
    <columns>SFCONTENT_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PS480FunctionValidationRulesActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Users - VR not active</label>
    <language>en_US</language>
</ListView>