force-app/main/default/objects/User/listViews/Inactive_Users_All_Wrong_Role.listView-meta.xml
<ListView>
    <fullName>Inactive_Users_All_Wrong_Role</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>SFLicense__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MARKETING_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>Archive Inactive Users</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Users - All - Wrong Role</label>
    <language>en_US</language>
</ListView>